# mlops_w2

./: .gitignore  README.md
.github/actions/python-poetry-env/: action.yml
.github/workflows/: pr.yml
project/: .pre-commit-config.yaml  pyproject.toml  setup_dashboard.sh  tox.ini
project/load_test/: average_test.py
project/scripts/: query_qpi.py
project/src/: constants.py  data_models.py  model.py  server.py
