[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["yudhiesh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.31.3"
anyscale = "^0.24.60"
pytest = "^8.3.2"
ruff = "^0.6.2"
tox = "^4.18.0"
ray = {extras = ["serve"], version = "^2.34.0"}
numpy = "^2.1.0"
onnxruntime = "^1.19.0"
wandb = "^0.17.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
